# TabPFNApproach

./: .commit_msg.txt  .coverage  .gitignore  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_README.md  IMPLEMENTATION_STATUS.md  PREPROCESSING_README.md  README.md  dashboard feeback.md  data_storage_and_metrics_reference.md  preprocessing_baseline_reference.md  pyproject.toml  requirements.txt
.github/: Dashboard Iterative Improvements Plan .prompt.md  copilot-instructions.md
.github/agents/: SessionSummary.agent.md
scripts/: investigate_tabpfn_output.py  remove_total_activity_from_json.py  rename_firsttry.py  test_tabpfn_output_format.py
src/: __init__.py
src/config/: preprocessing_config.py
src/data/: account_classifier.py  classif_charges.csv  fec_loader.py  preprocessing.py
src/forecasting/: __init__.py  __main__.py  batch_processor.py  cli.py  company_discovery.py  data_converter.py  result_saver.py  tabpfn_forecaster.py
src/metrics/: DASHBOARDFEEDBACK.md  __init__.py  aggregation.py  cli.py  compute_metrics.py  pipeline.py  result_loader.py  seasonal_naive.py
src/visualization/: __init__.py  app.py  callbacks.py  cli.py  data_loader.py  layouts.py  translations.py
src/visualization/components/: __init__.py  metrics_table.py  time_series_chart.py
src/visualization/utils/: __init__.py
tabpfn-time-series/: pyproject.toml
tabpfn-time-series/tabpfn_time_series/: ts_dataframe.py
tests/: __init__.py
tests/unit/: __init__.py
tests/unit/data/: test_fec_loader.py  test_preprocessing.py
tests/unit/forecasting/: test_batch_processor.py  (+4 more)
(+22 files in other folders)
